[project]
name = "pythonprojectcounter"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Pislar",email = "pislarmaxim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe (>=0.10.31,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
